add footer and header

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
+		<h4 class="repo">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, neque
+			beatae repudiandae, officiis ducimus, fugit labore debitis excepturi hic
+			sunt officia obcaecati! Est, vero! Cum dolor aliquam harum quaerat minus!
+		</h4>
 		<div class="promo">
 			<div class="container">
 				<header class="header">
